syntax = "proto3";
package calculator;
option go_package = "calculatorpb";


service CalculatorService {
    rpc Sum (SumRequest) returns (SumResponse){};
    rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse);
    rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse);
    rpc FindMaximun (stream FindMaximunRequest) returns (stream FindMaximunResponse);

    // error handling
    // this RPC will throw an exception if the number is negative
    // The error being sent is of type INVALID_ARGUMENT
    rpc SquareRoot (SquareRootRequest) returns (SquareRootResponse);
}

message SumRequest {
    int32 first_number =1;
    int32 second_number =2;
}

message SumResponse {
    int32 sum_result=1;
}

message PrimeNumberDecompositionRequest {
    int64 number= 1;
}

message PrimeNumberDecompositionResponse {
    int64 primer_factor=1;
}
message ComputeAverageRequest {
    int32 number=1;
}
message ComputeAverageResponse {
    double average=1;
}
message FindMaximunRequest {
    int32 number=1;
}
message FindMaximunResponse {
    int32 maximun=1;
}
message SquareRootRequest {
    int32 number=1;
}
message SquareRootResponse {
    double number_root=1;
}